[net]
git-fetch-with-cli = true

[package]
name = "librustzcash"
version = "0.1.0"
authors = [
    "Sean Bowe <ewillbefull@gmail.com>",
    "Jack Grigg <jack@z.cash>",
    "Jay Graber <jay@z.cash>",
    "Simon Liu <simon@z.cash>"
    ]

[lib]
name = "rustzcash"
path = "src/rustzcash.rs"
crate-type = ["staticlib", "cdylib"]

[dependencies]
bellman = { path = "../bellman" }
libc = "0.2"
pairing = { path = "../pairing" }
lazy_static = "1"
byteorder = "1"
rand = "0.4"
sapling-crypto = { path = "../sapling-crypto" }
zip32 = { path = "../zip32" }
blake2-rfc = { path = "../blake2-rfc" }
blake2b_rfc = { path = "../blake2-rfc/blake2b", default-features = false }
blake2s_rfc = { path = "../blake2-rfc/blake2s", default-features = false }