[net]
git-fetch-with-cli = true

[package]
authors = ["Sean Bowe <sean@z.cash>"]
description = "Cryptographic library for Zcash Sapling"
documentation = "https://github.com/zcash-hackworks/sapling"
homepage = "https://github.com/zcash-hackworks/sapling"
license = "MIT/Apache-2.0"
name = "sapling-crypto"
repository = "https://github.com/zcash-hackworks/sapling"
version = "0.0.1"

[dependencies.pairing]
path = "../pairing"
features = ["expose-arith"]

[dependencies]
bellman = { path = "../bellman" }
rand = "0.4"
digest = "0.7"
byteorder = "1"
blake2-rfc = { path = "../blake2-rfc" }
blake2b_rfc = { path = "../blake2-rfc/blake2b", default-features = false }
blake2s_rfc = { path = "../blake2-rfc/blake2s", default-features = false }

[dev-dependencies]
hex-literal = "0.1"
rust-crypto = "0.2"

[features]
default = ["u128-support"]
u128-support = ["pairing/u128-support"]
