[net]
git-fetch-with-cli = true

[package]
name = "zip32"
version = "0.0.0"
authors = [
    "Jack Grigg <jack@z.cash>",
]
license = "MIT/Apache-2.0"

description = "Library for implementing shielded hierarchical deterministic wallets"
documentation = "https://docs.rs/zip32/"
homepage = "https://github.com/zcash-hackworks/zip32"
repository = "https://github.com/zcash-hackworks/zip32"

[dependencies]
aes = "0.2"
byteorder = "1"
fpe = "0.1"
lazy_static = "1.0"
pairing = { path = "../pairing" }
sapling-crypto = { path = "../sapling-crypto" }
blake2-rfc = { path = "../blake2-rfc" }
blake2b_rfc = { path = "../blake2-rfc/blake2b", default-features = false }
blake2s_rfc = { path = "../blake2-rfc/blake2s", default-features = false }